--- a/src/assets/css/sass/base/_iconfont.scss
+++ b/src/assets/css/sass/base/_iconfont.scss
@@ -20,79 +20,15 @@
 }
 
 // Icons
-.gecko-icon-arrow-down:before {
+.gecko-icon-f1-logo:before {
     content: "\EA01"
 }
 
-.gecko-icon-arrow-left:before {
+.gecko-icon-finish-flag:before {
     content: "\EA02"
 }
 
-.gecko-icon-arrow-right:before {
+.gecko-icon-formula-car:before {
     content: "\EA03"
-}
-
-.gecko-icon-arrow-up:before {
-    content: "\EA04"
-}
-
-.gecko-icon-cart:before {
-    content: "\EA05"
-}
-
-.gecko-icon-close:before {
-    content: "\EA06"
-}
-
-.gecko-icon-contact:before {
-    content: "\EA07"
-}
-
-.gecko-icon-dealer:before {
-    content: "\EA08"
-}
-
-.gecko-icon-delivery:before {
-    content: "\EA09"
-}
-
-.gecko-icon-facebook:before {
-    content: "\EA0A"
-}
-
-.gecko-icon-gallery:before {
-    content: "\EA0B"
-}
-
-.gecko-icon-home:before {
-    content: "\EA0C"
-}
-
-.gecko-icon-list:before {
-    content: "\EA0D"
-}
-
-.gecko-icon-minus:before {
-    content: "\EA0E"
-}
-
-.gecko-icon-plus:before {
-    content: "\EA0F"
-}
-
-.gecko-icon-search:before {
-    content: "\EA10"
-}
-
-.gecko-icon-secure:before {
-    content: "\EA11"
-}
-
-.gecko-icon-warranty:before {
-    content: "\EA12"
-}
-
-.gecko-icon-youtube:before {
-    content: "\EA13"
 }
 
