--- a/src/assets/css/sass/main.scss
+++ b/src/assets/css/sass/main.scss
@@ -20,16 +20,15 @@
 // Base
 @import "base/sprite";
 @import "base/iconfont";
-@import "base/typography";
 @import "base/global";
+@import "base/typography";
 
 // Layout
 @import "layout/header";
 @import "layout/content";
-@import "layout/bottom";
 @import "layout/footer";
 @import "layout/print";
 
-// Components
-
-// Pages
+/* inject:scss */
+@import "../../../app/components/drivers/_drivers.scss";
+/* endinject */
