--- a/src/app/components/drivers/_drivers.scss
+++ b/src/app/components/drivers/_drivers.scss
@@ -14,6 +14,7 @@
 
     // Highlighted world champion
     .gecko-world-champion-yes {
+        font-weight: bold;
         box-shadow: 0 0 5px $medium-gray;
         border: 1px solid $dark-gray;
         transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
