--- a/src/assets/css/sass/main.scss
+++ b/src/assets/css/sass/main.scss
@@ -31,4 +31,5 @@
 
 /* inject:scss */
 @import "../../../app/components/drivers/_drivers.scss";
+@import "../../../app/components/home/_home.scss";
 /* endinject */
